--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -1,16 +1,17 @@
-﻿<div>
-    <div ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
+﻿<div class="vr-datagrid">
+    <div class="vr-datagrid-header" ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
         <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
             <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
         </div>
     </div>
 
-</div>
-<div ng-style="ctrl.gridStyle" style="overflow-y:auto">
-    <div ng-repeat="dataItem in ctrl.datasource">
-        <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
-            <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
-        </div>
 
+    <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
+        <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
+            <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
+                <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+            </div>
+
+        </div>
     </div>
 </div>
