--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
@@ -1,6 +1,11 @@
-﻿<div ng-show="isLoading" style="z-index: 100; position: absolute; color: gray; font-size: 16px; height: 350px;">
-    <img src="~/../images/loader-mask.gif"  />
+﻿<div style="position:relative">
+    <img src="/images/loader-mask.gif" ng-show="isLoading" style="position:absolute;top:45%;left:45%" />
+    <div ng-class="{'divLoading': isLoading}">
+        <div ng-show="isSettingsVisible()" style="z-index: 90; position: relative; ">
+            <div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="changeSettings()"></span></div>
+        </div>
+        <div id="divChart" />
+    </div>
+    
 </div>
 
-<div ng-show="isSettingsVisible()" style="z-index: 90; position: relative; "><div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="changeSettings()"></span></div></div>
-<div id="divChart" style="height:350px" />
