--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -1,17 +1,22 @@
-﻿<div class="vr-datagrid">
-    <div class="vr-datagrid-header" ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
-        <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
-            <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
-        </div>
-    </div>
-
-
-    <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
-        <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
-            <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
-                <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+﻿
+<div style="position:relative">
+    <img src="/images/loader-mask.gif" ng-show="ctrl.isloading" style="position:absolute;top:45%;left:45%"/>
+    <div class="vr-datagrid" ng-class="{'divLoading': ctrl.isloading}">
+        <div class="vr-datagrid-header" ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
+            <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
+                <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
             </div>
+        </div>
 
+
+        <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
+            <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
+                <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
+                    <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
+
