--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -1,22 +1,43 @@
-﻿
-<div style="position:relative">
-    <img src="/images/loader-mask.gif" ng-show="ctrl.isloading" style="position:absolute;top:45%;left:45%"/>
-    <div class="vr-datagrid" ng-class="{'divLoading': ctrl.isloading}">
-        <div class="vr-datagrid-header" ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
-            <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
-                <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
-            </div>
+﻿<div class="vr-datagrid">
+    <div class="vr-datagrid-header" ng-sortable="itemsSortable" ng-hide="ctrl.hideheader">
+        <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
+            <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
         </div>
+    </div>
 
 
-        <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
-            <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
-                <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
-                    <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+    <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
+        <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
+            <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
+                <div class="vr-datagrid-cell">
+                    <div class="vr-datagrid-celltext">
+                        <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+                    </div>
                 </div>
 
             </div>
+            <div ng-style="{'width': ctrl.actionsColumnWidth, 'display':'inline-block'}" ng-show="ctrl.isActionMenuVisible(dataItem)">
+                <div class="vr-datagrid-cell">
+                    <div class="vr-datagrid-celltext">
+                        <div ng-mouseleave="show = false">
+                            <label class=" hand-cursor" ng-init="show=false" ng-click="show=!show ;">
+                                <span class="glyphicon glyphicon-list-alt"></span>
+                            </label>
+                            <ul role="menu" class="dropdown-menu gid-cell-menu am-fade-and-slide-top" ng-show=" show == true">
+                                <li role="presentation">
+                                    <div ng-repeat="action in ctrl.getMenuActions(dataItem)" class="mark-select " style="padding-left: 2px; ">
+                                        <div class=" hand-cursor" ng-click="ctrl.actionClicked(action)"><span style="font-size:11px">{{action.name}}</span></div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
 </div>
-
+<div ng-show="ctrl.showPager">
+    <vr-pagination pagersettings="ctrl.pagerSettings"></vr-pagination>
+</div>
