--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
@@ -5,7 +5,7 @@
                 <span style="padding: 3px; font-weight: bold; font-size: 11px">
                     {{selectedEntityTitle}}
                 </span>
-                <div ng-repeat="action in ctrl.menuactions" class="mark-select " style="padding-left: 2px; ">
+                <div ng-repeat="action in ctrl.menuActions" class="mark-select " style="padding-left: 2px; ">
                     <div class=" hand-cursor" ng-click="ctrl.actionClicked(action)"><span style="font-size:11px">{{action.name}}</span></div>
                 </div>
             </li>
