--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -1,9 +1,9 @@
 ﻿<div class="vr-datagrid">
-    <div class="vr-datagrid-header"  ng-hide="ctrl.hideheader">
+    <div class="vr-datagrid-header" ng-hide="ctrl.hideheader" ng-style="ctrl.headerStyle">
         <div ng-style="{'width': ctrl.expandableColumnWidth, 'display':'inline-block'}" ng-show="ctrl.expandableColumnWidth != undefined">
 
         </div>
-        <div style="display:inline" ng-sortable="itemsSortable">
+        <div ng-style="{'display':'inline-block', 'width': ctrl.dataColumnsSectionWidth}" ng-sortable="itemsSortable">
             <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block'}">
                 <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
             </div>
@@ -14,22 +14,24 @@
 
     <div ng-style="ctrl.gridStyle" style="overflow-y:auto">
         <div class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
-            <div>
+            <div ng-style="{'background-color': isRowExpanded ? '#F5F5F5' : 'Transparent', 'font-weight' :isRowExpanded ? 'bolder' : 'normal', 'border-right': '1px solid #D0D0D0', 'border-left': '1px solid #D0D0D0'}">
                 <div ng-style="{'width': ctrl.expandableColumnWidth, 'display':'inline-block'}" ng-show="ctrl.expandableColumnWidth != undefined" ng-init="isRowExpanded = false">
-                    <label style="height:9px" class=" hand-cursor" ng-click="ctrl.expandRow($index, dataItem);isRowExpanded = true" ng-show="!isRowExpanded">
-                        <span class="glyphicon glyphicon-plus"></span>
+                    <label style="height: 9px;" class=" hand-cursor" ng-click="ctrl.expandRow($index, dataItem);isRowExpanded = true" ng-show="!isRowExpanded">
+                        <span class="glyphicon glyphicon-plus" style="top: -4px; left: 2px"></span>
                     </label>
-                    <label style="height:9px" class=" hand-cursor" ng-click="ctrl.collapseRow($index, dataItem);isRowExpanded = false" ng-show="isRowExpanded">
-                        <span class="glyphicon glyphicon-minus"></span>
+                    <label style="height: 9px;" class=" hand-cursor" ng-click="ctrl.collapseRow($index, dataItem);isRowExpanded = false" ng-show="isRowExpanded">
+                        <span class="glyphicon glyphicon-minus" style="top: -4px; left: 2px"></span>
                     </label>
                 </div>
-                <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-right': colDef.borderRight}">
-                    <div class="vr-datagrid-cell">
-                        <div class="vr-datagrid-celltext">
-                            <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+                <div ng-style="{'display':'inline-block', 'width': ctrl.dataColumnsSectionWidth}">
+                    <div ng-repeat="colDef in ctrl.columnDefs" ng-style="{'width': colDef.width, 'display':'inline-block', 'border-left': $index != 0 ? colDef.borderRight : ''}">
+                        <div class="vr-datagrid-cell">
+                            <div class="vr-datagrid-celltext">
+                                <vr-datagridcell htmltemplate='colDef.cellTemplate'></vr-datagridcell>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
                 <div ng-style="{'width': ctrl.actionsColumnWidth, 'display':'inline-block'}" ng-show="ctrl.isActionMenuVisible(dataItem)">
                     <div class="vr-datagrid-cell">
@@ -50,9 +52,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divExpandableRowContent_{{$index}}" ng-show="isRowExpanded">
+            <div id="divExpandableRowContent_{{$index}}" ng-show="isRowExpanded" style="border-top: 1px solid #D0D0D0">
                 <div ng-style="{'width': ctrl.expandableColumnWidth, 'display':'inline-block'}"></div>
-                <div vr-htmlcompiler="dataItem.expandableRowTemplate" ng-style="{'width': ctrl.expandableSectionWidth, 'display':'inline-block'}"></div>
+                <div vr-htmlcompiler="dataItem.expandableRowTemplate" ng-style="{'width': ctrl.expandableSectionWidth, 'display':'inline-block', 'padding': '5px', 'background-color': '#F5F5F5', 'border-left':'1px solid #F5F5F5'}"></div>
             </div>
         </div>
 
