refactored datagrid and chart directives
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23085

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Javascripts/Directives/Chart/vr-chart.html
@@ -13,8 +13,8 @@
         </ul>
     </div>
 
-    <div ng-show="isSettingsVisible()" style="z-index: 90; position: relative; ">
-        <div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="changeSettings()"></span></div>
+    <div ng-show="ctrl.isSettingsVisible()" style="z-index: 90; position: relative; ">
+        <div style="position: absolute; bottom: -32px;right:35px;cursor:pointer"><span class="glyphicon  glyphicon-cog" ng-click="ctrl.changeSettings()"></span></div>
     </div>
     <div id="divChart" />
 
