--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Pagination/vr-pagination.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Pagination/vr-pagination.html
@@ -5,7 +5,7 @@
                 <span style=" ">Page Size: </span>
             </vr-label>
             <div style="float: left; ">
-                <vr-select datasource="ctrl.topCounts" selectedvalues="ctrl.pagersettings.itemsPerPage" data-onselectionchanged="ctrl.pagersettings.pageChanged" nocaret noborder openup></vr-select>
+                <vr-select datasource="ctrl.topCounts" selectedvalues="ctrl.pagersettings.itemsPerPage" data-onselectionchanged="ctrl.pageSizeChanged" nocaret noborder openup></vr-select>
             </div>
 
 
@@ -13,7 +13,7 @@
         <vr-columns colnum="8" simplecol>
             <div style=" margin-top: 4px;text-align:center " ng-init="ctrl.pagersettings.currentPage = 1">
                 <pagination total-items="ctrl.pagersettings.totalDataCount" ng-model="ctrl.pagersettings.currentPage" max-size="10" class="pagination-sm" num-pages="ctrl.numberOfPages"
-                            items-per-page="ctrl.pagersettings.itemsPerPage" direction-links="true" boundary-links="true" rotate="false" ng-change="ctrl.pagersettings.pageChanged()"></pagination>
+                            items-per-page="ctrl.pagersettings.itemsPerPage" direction-links="true" boundary-links="true" rotate="false" ng-change="ctrl.pageChanged()"></pagination>
             </div>
         </vr-columns>
         <vr-columns colnum="2" simplecol>
