--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/Inputs/Select/vr-select.html
@@ -2,8 +2,7 @@
     <div class="dropdown-container2">
         <div class="dropdown drop-down-inside-modal">
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuRule" ng-mouseenter="ctrl.muteaction($event);">
-
-                <li role="presentation" ng-click="ctrl.onClickLi($event)">
+              <li role="presentation" ng-click="ctrl.onClickLi($event)" ng-if="ctrl.isDropDownOpened()">
 
                     <!-- filter  -->
                     <div ng-if="ctrl.isContainerVisible()" style="display: inline-block; width: 220px;">
@@ -26,14 +25,14 @@
                         <div ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px; padding-left: 3px;" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
                             <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.getdatasource() | filter:ctrl.filtername"
                                  style="display: block; padding: 3px 2px 0px 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
-                                <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
+                                <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ::ctrl.getObjectText(c)}}</div>
                                 <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
                             </div>
                         </div>
 
-                        <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" 
+                        <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);"
                              style="display: block; padding: 2px;border: 1px solid #AAA0A0 !important; white-space: normal;">
-                            <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
+                            <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
                         </div>
 
                     </div>
@@ -41,7 +40,7 @@
 
                     <div ng-if="!ctrl.isContainerVisible()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
                          style="display: block;padding:2px; margin:2px; white-space: normal;">
-                        <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
+                        <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{::ctrl.getObjectText(c)}}</div>
                     </div>
 
 
@@ -56,7 +55,7 @@
                         </div>
                         <div style="height: 225px; overflow: auto;padding-top:5px">
                             <span class="label custom-label" ng-repeat="obj in ctrl.selectedvalues">
-                                {{ctrl.getObjectText(obj)}}
+                                {{::ctrl.getObjectText(obj)}}
                                 <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="ctrl.selectValue($event,obj);"></span>
                             </span>
                         </div>
