Add Filter to Grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24068

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -17,7 +17,7 @@
 
     <div id="gridBodyContainer" ng-style="ctrl.gridStyle" ng-show="ctrl.isMainItemsShown">
         <div id="gridBody">
-            <div id="rowSection1" class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource">
+            <div id="rowSection1" class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource | filterColumns:ctrl.search">
 
             </div>
         </div>
