--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -17,6 +17,13 @@
 
     <div id="gridBodyContainer" ng-style="ctrl.gridStyle" ng-show="ctrl.isMainItemsShown">
         <div id="gridBody">
+            <div class="vr-datagrid-body" style="white-space: nowrap; background-color: Transparent; font-weight: bolder; border-right: 1px solid #D0D0D0; border-left: 1px solid #D0D0D0; " ng-if="ctrl.summaryRowHtml != undefined" >
+                <div style="margin:-2px" ng-style="{'width': ctrl.expandableColumnWidth, 'display':'inline-block'}" ng-show="ctrl.expandableColumnWidth != undefined">
+                </div>
+                <div ng-style="{'display':'inline-block', 'width': ctrl.dataColumnsSectionWidth}">
+                    <div vr-htmlcompiler="ctrl.summaryRowHtml"></div>
+                </div>
+            </div>
             <div id="rowSection1" class="vr-datagrid-body" ng-repeat="dataItem in ctrl.datasource | filter:ctrl.clientSideFilterFunction">
 
             </div>
