vr-datagrid enhancement
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24395

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/ActionBar/vr-actionbar.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/ActionBar/vr-actionbar.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     
-    <div class="btn-group" style="width: 49%;" ng-hide="ctrl.issectioncollapsed">
+    <div class="btn-group" style="width: 49%;">
         <div style="float:right">
             <div transclude-id="buttons"></div>
         </div>
