Drag drop modal  Add
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24515

--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/ModalService/vr-modal-service.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Services/ModalService/vr-modal-service.html
@@ -1,6 +1,6 @@
-﻿<div vr-modalcontent width="modalWidth">
+﻿<div vr-modalcontent width="modalWidth" draggable="">
     <vr-modalbody maxheight="modalMaxHeight">
         <div ng-include="templateUrl"></div>
-    </vr-modalbody>    
+    </vr-modalbody>
 </div>
 
