--- a/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Javascripts/Directives/DataGrid/vr-datagrid.html
@@ -7,7 +7,7 @@
         <div style="margin:-2px" ng-style="{'width': ctrl.expandableColumnWidth, 'display':'inline-block'}" ng-show="ctrl.expandableColumnWidth != undefined">
 
         </div>
-        <div ng-style="{'display':'inline-block', 'width': ctrl.dataColumnsSectionWidth}" ng-sortable="itemsSortable">
+        <div ng-style="{'display':'inline-block', 'width': ctrl.dataColumnsSectionWidth}" ng-sortable="ctrl.headerSortableListener">
             <div ng-repeat="colDef in ctrl.columnDefs" ng-hide="colDef.isHidden" ng-style="{'width': colDef.width, 'display':'inline-block'}">
                 <vr-datagridcell htmltemplate='colDef.headerCellTemplate'></vr-datagridcell>
             </div>
